refactor: 拆分 P1 剩余三项 — Dream/DeepSeekProvider/CommandState
1. Dream.parseMemoryResponse (63→25行):
   - extractJsonArray — 从响应提取 JSON 数组子串
   - createEntryFromRaw — Map→MemoryEntry 转换
   - createFallbackEntry — 消除两处重复的 fallback 代码

2. DeepSeekProvider.chatStream (89→30行):
   - parseSseStream — SSE 解析循环 + 累积到 StreamAccumulator
   - StreamAccumulator 内部类 — 封装 content + accumulators + toolCallMode

3. CommandState.handleStats (53→18行):
   - appendSessionStats — 当前会话：消息数/Token/迭代
   - appendGlobalStats — 全局：会话数/队列/订阅者
   - appendHookStats — Hook：事件计数/拦截/工具耗时

逻辑无任何变更.